--- a/index.html
+++ b/index.html
@@ -6,21 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+	<link rel="shortcut icon" href="assets/logoc20.png" />
+    <title>C20 | Portfolio</title>
 </head>
 <body>
+    <!-- *** HEADER *** -->
+    <header>
+    <!-- navbar -->
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+				<img src="assets/logoc20.png" height="50px" width="50px">
+              	<a class="navbar-brand" href="#">C20</a>
+             	 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+               		<span class="navbar-toggler-icon"></span>
+              	</button>
+              	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+                	<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  		<li class="nav-item"><a class="nav-link nl" href="#" id="1">Link</a></li>
+                  		<li class="nav-item"><a class="nav-link nl" href="#" id="2">Link</a></li>
+                  		<li class="nav-item"><a class="nav-link nl" href="#" id="3">Link</a></li>
+                  		<li class="nav-item"><a class="nav-link nl" href="#" id="4">Link</a></li>
+				  		<li class="nav-item trans">
+							<a class="nav-link tl" href="#" id="es" style="color: orange;">ES</a>
+							<a class="nav-link tl" href="#" id="en">EN</a>
+						</li>         
+                	</ul>
+              	</div>
+            </div>
+          </nav>
+		  <video class="hvid" autoplay loop muted width="100%"> 
+            <source src="assets/v1.mp4" >
+        </video>
+		<div class="title container-fluid text-center">
+            <h1 class="tit mb-5">Diseño y Programación Web</h1>
+			<h2 class="subtit">Ayudamos a tu empresa a alcanzar sus objetivos.</h2>
+        </div>
+		<div class="container btn-h">
+			<div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 justify-content-around">
+				<button class="col-4 btn">Contactenos</button>
+				<button class="col-4 btn">Lo que hacemos</button>
+			</div>
+		</div>
+    </header>
 
-    <h1 class="tit">Hola</h1>
+    <!-- *** MAIN ***  -->
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas est recusandae voluptate deleniti asperiores repudiandae minus sapiente optio tempore exercitationem quis quae alias, delectus unde modi corrupti? Rem ullam officiis molestias consequatur porro quibusdam! Impedit nostrum architecto consectetur atque voluptatibus quas, placeat unde vitae dolorum iure porro quo eum ipsum totam obcaecati aperiam magni corrupti exercitationem saepe alias adipisci? Itaque sequi illo ipsam similique iste iusto, velit consequatur incidunt facere consectetur! Provident laborum itaque excepturi. Quo saepe debitis, vel est quod omnis? Maiores, at. Cumque, eius repudiandae pariatur laboriosam dolor rerum eum? Officia obcaecati nihil praesentium temporibus neque, aliquid odio corporis dignissimos provident eveniet possimus harum ipsum rerum, officiis accusamus nam. Ullam sapiente ex dolores ratione quisquam deserunt, iusto veritatis blanditiis porro neque quos officiis placeat error possimus eum facere cupiditate soluta debitis ipsa unde veniam, commodi facilis mollitia. Eum minima quibusdam dignissimos sequi aperiam, assumenda error, obcaecati tempora vitae, atque fugiat blanditiis. Temporibus non placeat consequatur debitis adipisci, fugit ab sunt tempora perspiciatis quisquam vel est, harum deserunt obcaecati quaerat eligendi. Facere nam natus accusantium sit non quaerat beatae laborum maiores quae animi? Impedit, ducimus labore! Officia atque iure id explicabo molestias dicta culpa suscipit temporibus dignissimos fugiat est quaerat quos aut doloribus vel distinctio ratione, eius laudantium repudiandae nesciunt reprehenderit. Alias inventore eligendi voluptatibus repellendus nostrum debitis, culpa nulla voluptates quas quo illo eos suscipit dolor laboriosam natus. Beatae vitae minima pariatur accusantium accusamus voluptate numquam, deleniti necessitatibus, cumque illum eaque quam aperiam possimus dignissimos sapiente modi quas cupiditate quos quibusdam odit, at consectetur. Laudantium ipsa, blanditiis corrupti totam exercitationem consectetur nemo, provident atque nihil commodi tempora nobis earum minima ut voluptatem possimus amet nostrum. Iure nobis voluptatum perferendis soluta sequi numquam tempora molestias iusto animi impedit debitis enim et nostrum veritatis, maiores dignissimos assumenda doloremque fuga incidunt a maxime. Deserunt quas repellat laudantium excepturi id aperiam eveniet facere maxime eius delectus numquam architecto quos impedit, dolorem inventore minima veniam placeat quidem porro aliquid. Unde, dolores! Nemo adipisci quos ipsum quas praesentium rerum earum ut. Suscipit itaque veritatis minima nisi debitis voluptate nemo cum iste. Voluptatibus aliquid molestiae repellat voluptatum temporibus. Quibusdam illum fugit ullam officia quia incidunt quisquam, enim unde repellendus dolores magnam sapiente excepturi vitae rem voluptatibus eligendi alias? Non, alias ipsam! Nemo odit ratione ea ut cupiditate cumque cum suscipit placeat, dolores corrupti animi? Eaque id, ipsum exercitationem eos perferendis praesentium necessitatibus itaque, laboriosam, optio earum ad at saepe deserunt tempore in fuga quia cupiditate fugit neque rerum voluptatem facere hic! Blanditiis dolorum laborum quis ut, deleniti ipsa quia facere aliquid distinctio velit reiciendis minus expedita facilis corporis eos natus ipsam quasi accusantium rerum illo dignissimos ullam doloremque! Fuga placeat accusamus sapiente iusto expedita vel voluptatibus minus, non, voluptatum illum earum ad ea ab eius dolore consequuntur nesciunt labore, optio facilis. Odio, adipisci quam. Quod, harum iusto, ab officiis molestiae eveniet maxime totam quibusdam nam in accusantium, similique magni quos libero recusandae. Ut explicabo a fugit dolorum odit nemo, voluptatum nam, dignissimos tenetur ex earum!</p>
 
+    <!-- *** FOOTER ***  -->
 
-
-
-
-
-
-
-    
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
