--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li class="nav-item"><a class="nav-link nl" href="#" id="3">Link</a></li>
                         <li class="nav-item"><a class="nav-link nl" href="#" id="4">Link</a></li>
                         <li class="nav-item trans">
-							<a class="nav-link tl" href="#" id="es" style="color: orange;">ES</a>
+							<a class="nav-link tl" href="#" id="es" style="color: #f08036;">ES</a>
 							<a class="nav-link tl" href="#" id="en">EN</a>
 						</li>         
                     </ul>
@@ -116,7 +116,7 @@
     </div>
 
     <!-- COMO CREAMOS TU PROYECTO -->
-    <div class="container-fluid cctp">
+    <div class="container-fluid cctp" data-aos-easing="ease-in-out" data-aos="flip-right" data-aos-delay="200">
         <h2 class="text-center pb-3">Como creamos tu proyecto</h2>
         <div class="container text-center secciones">
             <div class="row sec align-items-end">
@@ -173,7 +173,7 @@
                     <p>Técnico Superior en Análisis de Sistemas</p>
                     <button class="btn-e">Ver más</button>
                 </div>
-                <div class="forma1" data-aos-easing="ease-in-out" data-aos="slide-right" data-aos-delay="200">
+                <div class="forma1" data-aos-easing="ease-in-out" data-aos="slide-right" data-aos-delay="100">
                 </div>              
             </div>
 
@@ -184,7 +184,7 @@
                     <p>Licenciada en Diseño</p>
                     <button class="btn-e">Ver más</button>
                 </div>
-                <div class="forma2" data-aos-easing="ease-in-out" data-aos="slide-left" data-aos-delay="300">
+                <div class="forma2" data-aos-easing="ease-in-out" data-aos="slide-left" data-aos-delay="200">
                 </div>              
             </div>
 
@@ -195,7 +195,7 @@
                     <p>Técnico Superior en Análisis de Sistemas</p>
                     <button class="btn-e">Ver más</button>
                 </div>
-                <div class="forma1" data-aos-easing="ease-in-out" data-aos="slide-right" data-aos-delay="400">
+                <div class="forma1" data-aos-easing="ease-in-out" data-aos="slide-right" data-aos-delay="300">
                 </div>              
             </div>
 
@@ -206,14 +206,146 @@
                     <p>Técnico Superior en Análisos de Sistemas</p>
                     <button class="btn-e">Ver más</button>
                 </div>
-                <div class="forma2" data-aos-easing="ease-in-out" data-aos="slide-left" data-aos-delay="500">
+                <div class="forma2" data-aos-easing="ease-in-out" data-aos="slide-left" data-aos-delay="400">
                 </div>              
             </div>
         </div>
     </div>
-	
+
+    <!-- PROYECTOS -->
+    <div class="containerforma text-center d-flex align-items-center justify-content-end" data-aos-easing="ease-in-out" data-aos="slide-left" data-aos-delay="200">
+        <h2 class="container-fluid forma-tit">Proyectos</h2>
+        <div class="formasubtit2"></div>
+    </div>
+    <div class="container">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" style="border: 1px red solid;">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/demo.png" class="d-block w-100 img-fluid" >
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/demo.png" class="d-block w-100 img-fluid" >
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Second slide label</h5>
+                        <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/demo.png" class="d-block w-100 img-fluid" >
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Third slide label</h5>
+                        <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+
+    <!-- TRABAJEMOS JUNTOS -->
+    <div class="containerforma text-center d-flex align-items-center" data-aos-easing="ease-in-out" data-aos="slide-right" data-aos-delay="200">
+        <h2 class="container-fluid forma-tit">Trabajemos Juntos</h2>
+        <div class="formasubtit" style="background-color: #fecc45;"></div>
+    </div>
+    <div class="container-fluid tj">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 justify-content-center text-center">
+            <div class="col" data-aos-easing="ease-in-out" data-aos="flip-left" data-aos-delay="100">
+                <img src="assets/cardproyectdemo.png" width="300px" height="300px">            
+            </div>
+            <div class="col formulario">
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control frm" placeholder="Nombre">
+                    <label for="floatingInput">Nombre</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="pais" class="form-control frm" placeholder="Pais">
+                    <label for="floatingInput">Pais</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control frm" placeholder="nombre@ejemplo.com">
+                    <label for="floatingInput">Email</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="tel" class="form-control frm" placeholder="Telefono">
+                    <label for="floatingInput">Telefono</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <textarea class="form-control frm" placeholder="Contanos sobre tu proyecto" id="floatingTextarea2" style="height: 100px"></textarea>
+                    <label for="floatingTextarea2">Comments</label>
+                </div>
+                <button class="btn-tj">Enviar</button>
+            </div>
+            <div class="col" data-aos-easing="ease-in-out" data-aos="flip-right" data-aos-delay="200">
+                <img src="assets/cardproyectdemo.png"  width="300px" height="300px"> 
+            </div>
+        </div>
+    </div>
 
     <!-- *** FOOTER ***  -->
+    <div class="container-fluid footer mt-5 ">
+        <div class="text-center">
+            <h3 class="tclqt">Tecnologias y herramientas con las que trabajamos</h3>
+            <div class="containerforma1 text-center d-flex justify-content-center" data-aos-easing="ease-in-out" data-aos="fade-down" data-aos-delay="200">
+                <div class="row tec">
+                    <div class="col">html</div>
+                    <div class="col">html</div>
+                    <div class="col">html</div>
+                    <div class="col">html</div>
+                    <div class="col">html</div>
+                    <div class="col">html</div>
+                </div>
+                <div class="formasubtit3" style="background-color: #f08036;"></div>
+            </div>
+        </div>
+        
+        <div class="container align-items-center">
+            <div class="row foo">
+                <div class="col foo">
+                    <img src="assets/logoc20.png" height="70px" width="70px">
+                    <h2>C20</h2>
+                </div>
+                <div class="col">
+                    email
+                </div>
+                <div class="col">
+                    tel
+                </div>
+                <div class="col">
+                    redes
+                </div>
+                <div class="col">
+                    <ul class="m-0">
+                        <li class="trans">
+                            <a class="tl" href="#" id="es" style="color: #f08036;">ES</a>
+                            <a class="tl" href="#" id="en">EN</a>
+                        </li> 
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid text-center mt-5">
+            <span>Todos los derechos reservados. 2021</span>
+        </div>
+    </div>
+
+
+
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
 AOS.init();
