funcion a como realizamos tu proyecto

--- a/index.html
+++ b/index.html
@@ -120,19 +120,19 @@
         <h2 class="text-center pb-3">Como creamos tu proyecto</h2>
         <div class="container text-center secciones">
             <div class="row sec align-items-end">
-                <div class="col seccion" onclick="a()">
+                <div class="col seccion" onclick="show('a')">
                     <p class="sec_cont">1. Contacto y asesoramiento.</p>
                     <img class="circulo">
                 </div>
-                <div class="col seccion" onclick="b()">
+                <div class="col seccion" onclick="show('b')">
                     <p class="sec_cont">2. Investigación y trabajo interno.</p>
                     <img class="circulo">
                 </div>
-                <div class="col seccion" onclick="c()">
+                <div class="col seccion" onclick="show('c')">
                     <p class="sec_cont">3. Diseño y presentacion de prototipo.</p>
                     <img class="circulo">
                 </div>
-                <div class="col seccion" onclick="d()">
+                <div class="col seccion" onclick="show('d')">
                     <p class="sec_cont">4. Desarrollo y entrega final.</p>
                     <img class="circulo">
                 </div>
