guardo ultimos cambios de mi rama

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- *** HEADER *** -->
     <header>
     <!-- navbar -->
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-light" >
+            <div class="container-fluid" width="100vw">
 				<img src="assets/logoc20.png" height="50px" width="50px">
               	<a class="navbar-brand" href="#">C20</a>
              	 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
