cambios minimos en 'servicios'

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="col" data-aos-easing="ease-in-out" data-aos="fade-up" data-aos-delay="100">
                 <div class="row">
                     <div class="col-3 text-center">
-                        <img src="assets/istotypedemo.png" width="100px" height="100px">
+                        <img class="img-fluid" src="assets/istotypedemo.png" width="100px" height="100px">
                     </div>
                     <div class="col">
                         <div class="tit_1"><strong>Programación</strong></div>
@@ -72,7 +72,7 @@
             <div class="col" data-aos-easing="ease-in-out" data-aos="fade-up" data-aos-delay="250">
                 <div class="row">
                     <div class="col-3 text-center">
-                        <img src="assets/istotypedemo.png" width="100px" height="100px">
+                        <img class="img-fluid" src="assets/istotypedemo.png" width="100px" height="100px">
                     </div>
                     <div class="col">
                         <div class="tit_1"><strong>Programación</strong></div>
@@ -84,7 +84,7 @@
             <div class="col" data-aos-easing="ease-in-out" data-aos="fade-up" data-aos-delay="350">
                 <div class="row">
                     <div class="col-3 text-center">
-                        <img src="assets/istotypedemo.png" width="100px" height="100px">
+                        <img class="img-fluid" src="assets/istotypedemo.png" width="100px" height="100px">
                     </div>
                     <div class="col">
                         <div class="tit_1"><strong>Programación</strong></div>
@@ -101,17 +101,21 @@
         <div class="formasubtit"></div>
     </div>
     <div class="container-fluid servicios">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 justify-content-center text-center">
-            <div class="col">
-                <img src="assets/cardproyectdemo.png" width="300px" height="300px">            
+        <div class="row justify-content-center text-center">
+
+            <div class="col" ata-aos-easing="ease-in-out" data-aos="slide-right" data-aos-delay="200">
+                <img class="img-fluid" src="assets/cardproyectdemo.png" width="300px" height="300px">            
             </div>
-            <div class="col">
+
+            <div class="col-4">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates iusto, cum dicta fugiat ullam tempore? Rerum, voluptatem veritatis consectetur voluptates eius officia perspiciatis illum, doloribus ut eaque quidem at vitae eligendi molestiae totam quae saepe! Ratione reiciendis, nemo sint quam facilis, a optio sunt praesentium at quo eaque ad! Cupiditate, in error exercitationem aperiam placeat quos at quaerat quasi, hic odio ad! Incidunt, illum harum. Explicabo, quasi ex? Neque, veritatis pariatur reprehenderit amet, quisquam esse, laboriosam libero cumque unde cum autem laudantium blanditiis ipsum! Autem, est enim. At velit facere quis optio autem eligendi animi officia ea, recusandae, praesentium hic?</p>
                 <button class="btn-s">Ver más</button>
             </div>
-            <div class="col">
-                <img src="assets/cardproyectdemo.png"  width="300px" height="300px"> 
+
+            <div class="col" ata-aos-easing="ease-in-out" data-aos="slide-left" data-aos-delay="200">
+                <img class="img-fluid" src="assets/cardproyectdemo.png"  width="300px" height="300px"> 
             </div>
+            
         </div>
     </div>
 
